# openarm_dynamixel_teleop

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dxl_openarm_leader/include/: pub_dynamixel_data_node.hpp  read_write_node.hpp
install/dxl_openarm_leader/lib/dxl_openarm_leader/: pub_position_node  read_write_position_node
install/dxl_openarm_leader/share/dxl_openarm_leader/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dxl_openarm_leader/share/dxl_openarm_leader/cmake/: dxl_openarm_leaderConfig-version.cmake  dxl_openarm_leaderConfig.cmake
install/dxl_openarm_leader/share/dxl_openarm_leader/environment/: ament_prefix_path.dsv  path.dsv
install/dxl_wt_openarm_leader/include/: pub_dynamixel_data_node.hpp  read_write_wt_position_node.hpp
install/dxl_wt_openarm_leader/lib/dxl_wt_openarm_leader/: pub_current_node  pub_position_node  read_write_wt_position_node
install/dxl_wt_openarm_leader/share/dxl_wt_openarm_leader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dxl_wt_openarm_leader/share/dxl_wt_openarm_leader/config/: params.yaml
install/dxl_wt_openarm_leader/share/dxl_wt_openarm_leader/launch/: read_write_wt_position.launch.py
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/share/dynamixel_sdk/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
install/dynamixel_sdk/share/dynamixel_sdk/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamixel_sdk_custom_interfacesConfig-version.cmake  dynamixel_sdk_custom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/msg/: SetCurrent.idl  SetCurrent.msg  SetPosition.idl  SetPosition.msg
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/srv/: GetPosition.idl  GetPosition.srv  GetPosition_Request.msg  GetPosition_Response.msg
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: pub_current_node  pub_current_pos_v1_node  pub_current_pos_v2_node  pub_position_node  pub_velocity_node  read_write_current_node  read_write_current_pos_v1_node  read_write_current_pos_v2_node  read_write_node  read_write_position_node  read_write_velocity_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/cmake/: dynamixel_sdk_examplesConfig-version.cmake  dynamixel_sdk_examplesConfig.cmake
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/environment/: ament_prefix_path.dsv  path.dsv
install/openarm/share/openarm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/openarm/share/openarm/cmake/: openarmConfig-version.cmake  openarmConfig.cmake
install/openarm/share/openarm/environment/: path.dsv  (+1 more)
install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/openarm_bringup/share/openarm_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/openarm_description/share/openarm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/DynamixelSDK/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
src/DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
src/DynamixelSDK/dynamixel_sdk_examples/include/: pub_dynamixel_data_node.hpp  read_write_current_node.hpp
src/DynamixelSDK/dynamixel_sdk_examples/src/: pub_current_node.cpp  pub_current_pos_v1_node.cpp  pub_current_pos_v2_node.cpp  pub_position_node.cpp  pub_velocity_node.cpp  read_write_current_node.cpp  read_write_current_pos_v1_node.cpp  read_write_current_pos_v2_node.cpp  read_write_position_node.cpp  read_write_velocity_node.cpp
src/dxl_openarm_leader/: CMakeLists.txt
src/dxl_openarm_leader/include/: pub_dynamixel_data_node.hpp
src/dxl_openarm_leader/src/: read_write_position_node.cpp
src/dxl_wt_openarm_leader/: CMakeLists.txt
src/dxl_wt_openarm_leader/config/: params.yaml
src/dxl_wt_openarm_leader/src/: pub_current_node.cpp  pub_position_node.cpp  read_write_wt_position_node.cpp
src/openarm_ros2/: openarm.repos
src/openarm_ros2/.github/workflows/: lint.yml  release.yaml
src/openarm_ros2/openarm_bringup/launch/: openarm.bimanual.launch.py
(+165 files in other folders)
